# noggit-red

./: .gitignore  CMakeLists.txt  TODO.md
resources/: resources.qrc
src/noggit/: Action.cpp  Action.hpp  ActionManager.cpp  ActionManager.hpp  Alphamap.cpp  AsyncLoader.h  AsyncObjectMultimap.hpp  Camera.cpp  Camera.hpp  DBC.cpp  DBC.h  DBCFile.cpp  DBCFile.h  MapChunk.cpp  MapChunk.h  MapTile.cpp  MapTile.h  MapView.cpp  MapView.h  Model.cpp  ModelInstance.cpp  ModelInstance.h  Particle.cpp  Particle.h  Sky.cpp  TextureManager.cpp  TextureManager.h  WMO.cpp  WMO.h  WMOInstance.cpp  World.cpp  World.h  liquid_layer.hpp  map_horizon.cpp  map_index.cpp  map_index.hpp  texture_set.cpp  texture_set.hpp  tool_enums.hpp  wmo_liquid.cpp  (+2 more)
src/noggit/application/: ApplicationEntry.cpp  NoggitApplication.cpp  NoggitApplication.hpp
src/noggit/data/databases/: DBCFiles.cpp  DBCFiles.h
src/noggit/project/: ApplicationProject.cpp  ApplicationProject.h  ApplicationProjectReader.cpp
src/noggit/rendering/: CursorRender.cpp  CursorRender.hpp  LiquidRender.cpp  LiquidTextureManager.cpp  ModelRender.cpp  ModelRender.hpp  TileRender.cpp  TileRender.hpp  WMOGroupRender.cpp  WMOGroupRender.hpp  WMORender.cpp  WorldRender.cpp  WorldRender.hpp
src/noggit/rendering/glsl/: cursor_frag.glsl  cursor_vert.glsl  grid_frag.glsl  grid_vert.glsl  horizon_frag.glsl  horizon_vert.glsl  liquid_frag.glsl  liquid_vert.glsl  m2_box_vert.glsl  m2_frag.glsl  m2_vert.glsl  mfbo_vert.glsl  occluder_frag.glsl  occluder_vert.glsl  particle_frag.glsl  particle_vert.glsl  ribbon_frag.glsl  ribbon_vert.glsl  sky_frag.glsl  sky_vert.glsl  sphere_frag.glsl  sphere_vert.glsl  square_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  wire_box_vert.glsl  wmo_frag.glsl  wmo_vert.glsl
src/noggit/scripting/: script_image.cpp  script_image.hpp  script_noise.cpp  script_noise.hpp
src/noggit/ui/: ObjectEditor.h  TexturingGUI.cpp  Toolbar.cpp  Toolbar.h  ZoneIDBrowser.cpp  ZoneIDBrowser.h  minimap_widget.cpp  object_palette.cpp  object_palette.hpp  texture_swapper.cpp
src/noggit/ui/tools/ActionHistoryNavigator/: ActionHistoryNavigator.cpp
src/noggit/ui/tools/AssetBrowser/: ModelView.cpp  ModelView.hpp
src/noggit/ui/tools/AssetBrowser/Ui/: AssetBrowser.cpp  AssetBrowser.hpp
src/noggit/ui/tools/AssetBrowser/Ui/Model/: TreeManager.cpp
src/noggit/ui/tools/LightEditor/: LightEditor.cpp
src/noggit/ui/tools/MapCreationWizard/Ui/: MapCreationWizard.cpp  MapCreationWizard.hpp
src/noggit/ui/tools/PresetEditor/: ModelView.cpp
src/noggit/ui/tools/PresetEditor/Ui/: PresetEditor.cpp
src/noggit/ui/tools/PreviewRenderer/: PreviewRenderer.cpp  PreviewRenderer.hpp
src/noggit/ui/tools/UiCommon/: StackedWidget.hpp
src/noggit/ui/tools/ViewToolbar/Ui/: ViewToolbar.hpp
src/noggit/ui/tools/ViewportGizmo/: ViewportGizmo.cpp
src/noggit/ui/widgets/: DynamicMouseWidget.cpp  DynamicMouseWidget.h  LightViewWidget.cpp
src/noggit/ui/windows/EditorWindows/: SoundEntryPickerWindow.cpp  SoundEntryPickerWindow.h  ZoneIntroMusicPickerWindow.cpp  ZoneIntroMusicPickerWindow.h  ZoneMusicPickerWindow.cpp  ZoneMusicPickerWindow.h
src/noggit/ui/windows/SoundPlayer/: SoundEntryPlayer.cpp  SoundEntryPlayer.h
src/noggit/ui/windows/noggitWindow/: NoggitWindow.cpp  NoggitWindow.hpp
src/noggit/ui/windows/noggitWindow/components/: BuildMapListComponent.cpp  BuildMapListComponent.hpp
src/noggit/ui/windows/noggitWindow/widgets/: MapBookmarkListItem.cpp  MapListItem.cpp
src/noggit/ui/windows/projectCreation/: NoggitProjectCreationDialog.cpp  NoggitProjectCreationDialog.ui
src/noggit/ui/windows/projectSelection/: NoggitProjectSelectionWindow.cpp
src/noggit/ui/windows/projectSelection/components/: LoadProjectComponent.hpp  RecentProjectsComponent.cpp
src/noggit/ui/windows/projectSelection/widgets/: ProjectListItem.cpp  ProjectListItem.hpp
src/noggit/ui/windows/settingsPanel/: SettingsPanel.cpp  SettingsPanel.ui
src/opengl/: context.cpp  context.hpp  context.inl  scoped.hpp  scoped.ipp  shader.cpp  texture.cpp
src/util/: stb_image.h  stb_image_write.h
